--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,43 +1,51 @@
-<!doctype html>
-<html lang="zh">
+﻿<!DOCTYPE html>
+<html lang="zh-cn" >
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>幸运大抽奖</title>
-<link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/2.css">
+
 </head>
 <body>
-<main>
-	<div class="-content -index">
-		<div>
-			<div class="bounce-wrap">
-				<div class="bounce">
-					<div class="-shadow"></div>
-					<div class="-box-wrap js-box-wrap">
-						<div class="-box">
-							<div class="front wall"></div>
-							<div class="back wall"></div>
-							<div class="right wall"></div>
-							<div class="left wall"></div>
 
-							<div class="front-right wall"></div>
-							<div class="front-left wall"></div>
-							<div class="back-right wall"></div>
-							<div class="back-left wall"></div>  
-						</div>
-					</div>
-					<div id="emitter"></div>
-					<div id="score" class="aaa"></div>
-				</div>
-			</div>
-			</div>
-	</div>
-</main>
+<canvas id="canvas"></canvas>
+
+<script src='js/jreejo.js'></script>
+<script  src="js/1.js"></script>
+<div style="text-align:center;">
+    <div style="position:relative;bottom:1000px;">
+        <main>
+            <div class="-content -index">
+                <div>
+                    <div class="bounce-wrap">
+                        <div class="bounce">
+                            <div class="-shadow"></div>
+                            <div class="-box-wrap js-box-wrap">
+                                <div class="-box">
+                                    <div class="front wall"></div>
+                                    <div class="back wall"></div>
+                                    <div class="right wall"></div>
+                                    <div class="left wall"></div>
+
+                                    <div class="front-right wall"></div>
+                                    <div class="front-left wall"></div>
+                                    <div class="back-right wall"></div>
+                                    <div class="back-left wall"></div>
+                                </div>
+                            </div>
+                            <div id="emitter"></div>
+                            <div id="score" class="aaa"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
+</div>
+</body>
 
 <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
 <script src="js/vital.js"></script>
 <script src="js/index.js"></script>
-
-</body>
 </html>
